--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,7 +3,7 @@ name: Deploy Documentation to GitHub Pages
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: ['Deploy Documentation']
+    workflows: ['Release package']
     types:
       - completed
 
