--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.SSH_SECRET_KEY }}
+
+      - name: Print Secret Key
+        run: |
+          echo ${{ secrets.SSH_SECRET_KEY }}
+          echo ${{ secrets.PRIVATE_KEY }}
 
       # Setup Node.js environment
       - name: Setup Node.js
@@ -100,8 +105,6 @@ jobs:
 
       # Push repository changes
       - name: Push changes to repository
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git push origin && git push --tags
 
