--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -5,6 +5,12 @@ on:
     tags:
       - 'v*.*.*'
 
+env:
+  API_TOKEN: ${{ secrets.API_TOKEN }}
+  PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+  MERCHANT_NAME: ${{ secrets.MERCHANT_NAME }}
+  MERCHANT_CODE: ${{ secrets.MERCHANT_CODE }}
+
 permissions:
   contents: write
   discussions: write
